fix:removed utility class from iframe & indentation

--- a/css/style/avatar.css
+++ b/css/style/avatar.css
@@ -1,36 +1,40 @@
- .avatar{
-    border-radius:50%;
-    display:inline-block;
- }
- .lg-img , .lg-text{
-    width:8rem;
-    height:8rem;
- }
-.md-img , .md-text{
-    width:6.5rem;
-    height:6.5rem;
+.avatar {
+  border-radius: 50%;
+  display: inline-block;
 }
-.sm-img , .sm-text{
-    width:5rem;
-    height:5rem;
+.lg-img,
+.lg-text {
+  width: 8rem;
+  height: 8rem;
 }
-.xs-img , .xs-text{
-    width:3rem;
-    height:3rem;
+.md-img,
+.md-text {
+  width: 6.5rem;
+  height: 6.5rem;
+}
+.sm-img,
+.sm-text {
+  width: 5rem;
+  height: 5rem;
+}
+.xs-img,
+.xs-text {
+  width: 3rem;
+  height: 3rem;
 }
 
-.border-round{
-   border-radius: 50%;
+.border-round {
+  border-radius: 50%;
 }
-.border-square{
-   border-radius: 10px;
+.border-square {
+  border-radius: 10px;
 }
-.img-border{
-   border:3px solid var(--primary-color);
+.img-border {
+  border: 3px solid var(--primary-color);
 }
-.text-border1{
-   border:3px solid var(--vibrant);
+.text-border1 {
+  border: 3px solid var(--vibrant);
 }
-.text-border2{
-   border:3px solid var(--red);
+.text-border2 {
+  border: 3px solid var(--red);
 }
