--- a/docsite/components/avatar.html
+++ b/docsite/components/avatar.html
@@ -61,25 +61,24 @@
                 
                 <div class="centered shadow-box margin-md padding-y"> 
                 <div class="avatar padding-sm">
-                    <img class="lg-img border-round img-border" src="../../assets/avatar2.jfif" alt="Avatar">
+                    <img class="lg-img border-round img-border" src="../../assets/avatar2.jfif" alt="Avatar" loading="lazy">
                 </div>
                 <div class="avatar padding-sm">
-                    <img class="border-round img-border md-img" src="../../assets/avatar2.jfif" alt="Avatar">
+                    <img class="border-round img-border md-img" src="../../assets/avatar2.jfif" alt="Avatar" loading="lazy">
                 </div>
                 <div class="avatar padding-sm">
-                    <img class="border-round img-border sm-img" src="../../assets/avatar2.jfif" alt="Avatar">
+                    <img class="border-round img-border sm-img" src="../../assets/avatar2.jfif" alt="Avatar" loading="lazy">
                 </div>
                 <div class="avatar padding-sm">
-                    <img class="border-round img-border xs-img" src="../../assets/avatar.jfif" alt="Avatar">
+                    <img class="border-round img-border xs-img" src="../../assets/avatar.jfif" alt="Avatar" loading="lazy">
                 </div>
                 </div>
                 <div class="iframe-wrapper">
 
-                    <iframe
-                    src="https://carbon.now.sh/embed?bg=rgba%2868%2C170%2C153%2C1%29&t=night-owl&wt=none&l=auto&width=680&ds=true&dsyoff=45px&dsblur=45px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Fira+Code&fs=14px&lh=152%25&si=false&es=2x&wm=false&code=%253Cdiv%2520class%253D%2522avatar%2520padding-sm%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520class%253D%2522lg-img%2520border-round%2520img-border%2522%2520src%253D%2522..%252F..%252Fassets%252Favatar2.jfif%2522%2520alt%253D%2522Avatar%2522%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522avatar%2520padding-sm%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520class%253D%2522border-round%2520img-border%2520md-img%2522%2520src%253D%2522..%252F..%252Fassets%252Favatar2.jfif%2522%2520alt%253D%2522Avatar%2522%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522avatar%2520padding-sm%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520class%253D%2522border-round%2520img-border%2520sm-img%2522%2520src%253D%2522..%252F..%252Fassets%252Favatar2.jfif%2522%2520alt%253D%2522Avatar%2522%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522avatar%2520padding-sm%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520class%253D%2522border-round%2520img-border%2520xs-img%2522%2520src%253D%2522..%252F..%252Fassets%252Favatar.jfif%2522%2520alt%253D%2522Avatar%2522%253E%250A%2520%2520%2520%2520%253C%252Fdiv%253E"
-                    
+                   <iframe
+                    src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%2520%253Cdiv%2520class%253D%2522avatar%2522%253E%250A%2520%2520%2520%253Cimg%2520class%253D%2522lg-img%2520border-round%2520img-border%2522%2520src%253D%2522..%252F..%252Fassets%252Favatar2.jfif%2522%2520alt%253D%2522Avatar%2522%2520loading%253D%2522lazy%2522%253E%2520%2520%250A%2520%253C%252Fdiv%253E%250A%2520%253Cdiv%2520class%253D%2522avatar%2522%253E%250A%2520%2520%2520%2520%253Cimg%2520class%253D%2522md-img%2520border-round%2520img-border%2522%2520src%253D%2522..%252F..%252Fassets%252Favatar2.jfif%2522%2520alt%253D%2522Avatar%2522%2520loading%253D%2522lazy%2522%253E%250A%2520%2520%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%2520class%253D%2522avatar%2522%253E%250A%2520%2520%2520%2520%2520%253Cimg%2520class%253D%2522sm-img%2520border-round%2520img-border%2522%2520src%253D%2522..%252F..%252Fassets%252Favatar2.jfif%2522%2520alt%253D%2522Avatar%2522%2520loading%253D%2522lazy%2522%253E%250A%2520%2520%253C%252Fdiv%253E%250A%2520%2520%253Cdiv%2520class%253D%2522avatar%2520padding-sm%2522%253E%250A%2520%2520%2520%2520%2520%253Cimg%2520class%253D%2522xs-img%2520border-round%2520img-border%2522%2520src%253D%2522..%252F..%252Fassets%252Favatar.jfif%2522%2520alt%253D%2522Avatar%2522%2520loading%253D%2522lazy%2522%253E%250A%2520%2520%253C%252Fdiv%253E"
                     sandbox="allow-scripts allow-same-origin">
-                  </iframe>
+                    </iframe>
                 </div>
 
             </div>
@@ -90,22 +89,21 @@
                 <h2 class="mb-lg">Square Avatar</h2>
                 <div class="centered shadow-box margin-md padding-y">
                 <div class="avatar padding-sm">
-                    <img class="border-square img-border md-img" src="../../assets/avatar2.jfif" alt="Avatar">
+                    <img class="border-square img-border md-img" src="../../assets/avatar2.jfif" alt="Avatar" loading="lazy">
                 </div>
                 <div class="avatar padding-sm">
-                    <img class="border-square img-border sm-img" src="../../assets/avatar2.jfif" alt="Avatar">
+                    <img class="border-square img-border sm-img" src="../../assets/avatar2.jfif" alt="Avatar" loading="lazy">
                 </div>
 
                 <div class="avatar padding-sm">
-                    <img class="border-square img-border xs-img" src="../../assets/avatar.jfif" alt="Avatar">
+                    <img class="border-square img-border xs-img" src="../../assets/avatar.jfif" alt="Avatar" loading="lazy">
                 </div>
             </div>
                 <div class="iframe-wrapper">
-                    <iframe
-  src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%2520%253Cdiv%2520class%253D%2522avatar%2520padding-sm%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520class%253D%2522border-square%2520img-border%2520md-img%2522%2520src%253D%2522..%252F..%252Fassets%252Favatar2.jfif%2522%2520alt%253D%2522Avatar%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522avatar%2520padding-sm%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520class%253D%2522border-square%2520img-border%2520sm-img%2522%2520src%253D%2522..%252F..%252Fassets%252Favatar2.jfif%2522%2520alt%253D%2522Avatar%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522avatar%2520padding-sm%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520class%253D%2522border-square%2520img-border%2520xs-img%2522%2520src%253D%2522..%252F..%252Fassets%252Favatar.jfif%2522%2520alt%253D%2522Avatar%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E"
-  
-  sandbox="allow-scripts allow-same-origin">
-</iframe>
+                 <iframe
+                src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253C%21--For%2520small%2520and%2520extra%2520small%2520text%2520avatar%2520change%2520the%2520class%2520to%2520sm-text%2520and%2520xs-text--%253E%2520%250A%2520%253Cdiv%2520class%253D%2522avatar%2520padding-sm%2522%253E%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522border-round%2520text-border1%2520lg-text%2520centered%2520bg-secondary%2522%2520%253E%250A%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522font2%2520light-text%2522%253EABC%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%253C%252Fdiv%253E%250A%2520%253Cdiv%2520class%253D%2522avatar%2520padding-sm%2522%253E%250A%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522border-round%2520text-border2%2520md-text%2520centered%2522%2520%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522font3%2522%253EABC%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%253C%252Fdiv%253E"
+                sandbox="allow-scripts allow-same-origin">
+                </iframe>
                 </div>
             
             </div>
