--- a/css/style/card.css
+++ b/css/style/card.css
@@ -1,92 +1,90 @@
-.card{
-   position: relative;
-    background-color: var( --bg-secondary);
-    border-radius: 10px;
-    display:inline-block;
+.card {
+  position: relative;
+  background-color: var(--bg-secondary);
+  border-radius: 10px;
+  display: inline-block;
 }
-.simple-card{
-    max-width:300px;
-    min-height:280px;
+.simple-card {
+  max-width: 300px;
+  min-height: 280px;
 }
-.text-only-card{
-    max-width:300px;
-    min-height:150px;
+.text-only-card {
+  max-width: 300px;
+  min-height: 150px;
 }
-.horizontal-card{
-    max-width:320px;
-    min-height:180px;
+.horizontal-card {
+  max-width: 320px;
+  min-height: 180px;
 }
-.card-img{
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    width:300px;
-    height:180px;
-    z-index:3;
+.card-img {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  width: 300px;
+  height: 180px;
+  z-index: 3;
 }
-.card-heading{
-    font-weight: 900;
-    color:var(--vibrant);  
+.card-heading {
+  font-weight: 900;
+  color: var(--primary-color);
 }
-.card-textarea{
-    display:flex;
-    justify-content: space-between;
+.card-textarea {
+  display: flex;
+  justify-content: space-between;
 }
-.card-icon{
-    margin-top:5px;
+.card-icon {
+  margin-top: 5px;
 }
-.card-icon:hover{
-    font-weight: 800;
-    color:var(--vibrant);  
+.card-icon:hover {
+  color: var(--primary-color);
 }
-.dismiss-card-btn{
-    position: absolute;
-    top:10px;
-    right:10px;
-    opacity: .8;
+.dismiss-card-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  opacity: 0.8;
 }
-.dismiss-card-btn:hover{
-    opacity: 1;
-    font-weight: 8000;
+.dismiss-card-btn:hover {
+  opacity: 1;
+  font-weight: 8000;
 }
-.card-img-overlay{
-    width:300px;
-    height:200px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+.card-img-overlay {
+  width: 300px;
+  height: 200px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .card-img-overlay:hover {
-    opacity:0.2;
+  opacity: 0.2;
 }
-.card-img-overlay:hover + .overlay-card-content{
-    display:block;
-}
-
-.overlay-card-content{
-    position:absolute;
-    top:45%;
-    left:10%;
-    display:none;
+.card-img-overlay:hover + .overlay-card-content {
+  display: block;
 }
 
-.top-overlayed-icon{
-    position: absolute;
-    top:10px;
-    right:10px
-}
-.bottom-overlayed-icon{
-    position: absolute;
-    bottom:10px;
-    right:10px;
+.overlay-card-content {
+  position: absolute;
+  top: 45%;
+  left: 10%;
+  display: none;
 }
 
-.horizontal-card-img{
-    min-width:100px;
-    height:100px;
-    margin:10px 0 0 10px;
-
+.top-overlayed-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
-.stars{
-    padding:.2rem 0rem;
-    color:var(--text-color)
+.bottom-overlayed-icon {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+.horizontal-card-img {
+  min-width: 100px;
+  height: 100px;
+  margin: 10px 0 0 10px;
+}
+.stars {
+  padding: 0.2rem 0rem;
+  color: var(--text-color);
 }
