--- a/docsite/components/image.html
+++ b/docsite/components/image.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>beadsUI || Avatar</title>
+    <title>Image || BeadsUI</title>
     <link rel="stylesheet" href="../docs.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
@@ -52,7 +52,7 @@
         <div class="content-wrapper">
            <div class="section">
                <h2 class="mb-lg">Image</h2>
-               <p class="mb-lg font3 text-secondary">Image is the main focus of the website and it should be responsive.It helps you to attract attention of the user and also to guide them and getting them engaged in your website.  
+               <p class="mb-lg font3 text-secondary">Image is the main focus of any website and it should be responsive.It helps you to attract attention of the user and also to guide them and getting them engaged in your website.  
            <div class="section">
             <h2 class="mb-lg">Round Image</h2>
             <div class="centered shadow-box margin-md padding-y">
