fix: indentation and eye-btn

--- a/css/style/input.css
+++ b/css/style/input.css
@@ -1,6 +1,6 @@
-.input{
-    padding:.5rem 1rem;
+.input {
+  padding: 0.5rem 1rem;
 }
-.eye{
-    margin-left:-30px;
+.eye {
+  margin-left: -30px;
 }
