fix: indentation and link

--- a/docsite/components/textutil.html
+++ b/docsite/components/textutil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>beadsUI || Avatar</title>
+    <title>TextUtils || BeadsUI</title>
     <link rel="stylesheet" href="../docs.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
@@ -77,11 +77,11 @@
         <div class="section">
             <h2 class="mb-lg">Colored Text</h2>
             <div class="centered shadow-box margin-md padding-y">
-              <p class="font2 text-danger margin-sm">Danger Text</p>
-              <p class="font2 text-success margin-sm">success Text</p>
               <p class="font2 text-primary margin-sm">primary Text</p>
               <p class="font2 text-secondary margin-sm">secondary Text</p>
-              <p class="font2 text-primary margin-sm">vibrant Text</p>
+              <p class="font2 text-danger margin-sm">Danger Text</p>
+              <p class="font2 text-success margin-sm">success Text</p>
+              
             </div>
             <div class="iframe-wrapper">
                 <iframe
