--- a/docsite/components/input.html
+++ b/docsite/components/input.html
@@ -109,7 +109,7 @@
     
     <footer class="centered vertical-direction bg-secondary">
         <button class="prev-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-primary" href="image.html"><i class="fa fa-arrow-left "></i> Image </a></button>
-        <button class="next-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-primary" href="input.html">Input <i class="fa fa-arrow-right "></i> </a></button>
+        <button class="next-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-primary" href="textutil.html">TextUtils <i class="fa fa-arrow-right "></i> </a></button>
        
 
         <h2 class=" mb-lg ">Build with <span class="text-primary">&lt;/&gt;</span> by Kajal Kumari</h2>
