--- a/docsite/components/navigation.html
+++ b/docsite/components/navigation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>beadsUI || Avatar</title>
+    <title>Navigation || BeadsUI</title>
     <link rel="stylesheet" href="../docs.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
@@ -59,7 +59,7 @@
                <nav class="nav nav-lg bg-secondary margin-sm font2">
                    <div class="mr-auto">
                        <i class="fa fa-bars padding-sm light-text"></i>
-                       <span class=""><a href="#" class="decor-none text-primary">Home</a></span>
+                       <span class=""><a href="#" class="decor-none light-text">Home</a></span>
                     </div>
                     <div class="ml-auto">
                         <i class="fab fa-github padding-xs light-text"></i>
@@ -70,10 +70,10 @@
             </div>
 
             <div class="iframe-wrapper">
-                <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%2520%2520%2520%2520%2520%2520%253Cnav%2520class%253D%2522nav%2520nav-lg%2520bg-secondary%2520margin-sm%2520font2%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522mr-auto%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522fa%2520fa-bars%2520padding-sm%2520light-text%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522%2522%253E%253Ca%2520href%253D%2522%2523%2522%2520class%253D%2522decor-none%2520text-primary%2522%253EHome%253C%252Fa%253E%253C%252Fspan%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522ml-auto%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522fab%2520fa-github%2520padding-xs%2520light-text%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522fab%2520fa-linkedin%2520padding-xs%2520light-text%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522fab%2520fa-twitter%2520padding-xs%2520light-text%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fnav%253E"
-                sandbox="allow-scripts allow-same-origin">
-              </iframe>
+               <iframe
+                    src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253Cnav%2520class%253D%2522nav%2520nav-lg%2520bg-secondary%2520margin-sm%2520font2%2522%253E%250A%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522mr-auto%2522%253E%250A%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522fa%2520fa-bars%2520padding-sm%2520light-text%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522%2522%253E%253Ca%2520href%253D%2522%2523%2522%2520class%253D%2522decor-none%2520light-text%2522%253EHome%253C%252Fa%253E%253C%252Fspan%253E%250A%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2509%253Cdiv%2520class%253D%2522ml-auto%2522%253E%250A%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522fab%2520fa-github%2520padding-xs%2520light-text%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522fab%2520fa-linkedin%2520padding-xs%2520light-text%2522%253E%253C%252Fi%253E%250A%2520%2520%2520%2520%2520%253Ci%2520class%253D%2522fab%2520fa-twitter%2520padding-xs%2520light-text%2522%253E%253C%252Fi%253E%250A%2509%253C%252Fdiv%253E%250A%253C%252Fnav%253E"
+                    sandbox="allow-scripts allow-same-origin">
+                    </iframe>
             </div>
            </div>
         <div class="section">
