fix: title and indentation

--- a/docsite/components/modal.html
+++ b/docsite/components/modal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>beadsUI || Avatar</title>
+    <title>Modal || BeadsUI</title>
     <link rel="stylesheet" href="../docs.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
@@ -60,8 +60,8 @@
 
                     <button class="padding-sm reset btn-outline font3" id="modal-sm-popup-btn">Show me</button>
                     <div class="modal modal-sm shadow-box mb-lg" id="sm-modal">
-                        <div class="font3 padding-xs">Simple Small Modal</div><hr/>
-                        <p class="text-primary padding-xs mb-lg">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi harum odit quasi.</p>
+                        <div class="font3 padding-xs light-text">Simple Small Modal</div><hr/>
+                        <p class="light-text padding-xs mb-lg">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi harum odit quasi.</p>
                         <button class="reset padding-sm" id=
                         "cancel-btn-sm">Cancel</button>
                        </div>
@@ -69,10 +69,10 @@
             </div>
                 <div class="iframe-wrapper">
                     <iframe
-  src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253C%21--HTML%2520--%253E%250A%253Cdiv%2520class%253D%2522%2520centered%2520shadow-box%2520margin-md%2520padding-y%2522%253E%2520%250A%2509%253Cbutton%2520class%253D%2522padding-sm%2520reset%2520btn-outline%2520font3%2522%2520id%253D%2522modal-sm-popup-btn%2522%253EShow%2520me%253C%252Fbutton%253E%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522modal%2520modal-sm%2520shadow-box%2520mb-lg%2522%2520id%253D%2522sm-modal%2522%253E%250A%2520%2520%2509%253Cdiv%2520class%253D%2522font3%2520padding-xs%2522%253ESimple%2520small%2520modal%253C%252Fdiv%253E%253Chr%252F%253E%250A%2520%2520%2520%2520%253Cp%2520class%253D%2522text-primary%2520padding-xs%2520mb-lg%2522%253ELorem%2520ipsum%252C%2520dolor%2520sit%2520amet%2520consectetur%2520adipisicing%2520elit.%2520%250A%2520%2509Eligendi%2520harum%2520odit%2520quasi.%253C%252Fp%253E%250A%2520%2520%2520%253Cbutton%2520class%253D%2522reset%2520padding-sm%2522%2520id%253D%2522cancel-btn-sm%2522%253ECancel%253C%252Fbutton%253E%250A%2520%2520%2520%2509%2520%253C%252Fdiv%253E%250A%2520%253C%252Fdiv%253E%250A%253C%21--js--%253E%250A%250Avar%2520btnsmallModal%2520%253D%2520document.querySelector%28%2522%2523modal-sm-popup-btn%2522%29%250Avar%2520smallModal%2520%253D%2520document.querySelector%28%2522%2523sm-modal%2522%29%250Avar%2520cancelbtnsm%2520%253D%2520document.querySelector%28%2522%2523cancel-btn-sm%2522%29%250AbtnsmallModal.addEventListener%28%2522click%2522%252C%28%29%253D%253E%257B%250A%2520%2520%2520%2520smallModal.style.display%253D%2522block%2522%250A%257D%29%250Acancelbtnsm.addEventListener%28%2522click%2522%252C%28%29%253D%253E%257B%250A%2520%2520%2520%2520smallModal.style.display%2520%253D%2522none%2522%250A%257D%29"
-  class="iframe-lg"
-  sandbox="allow-scripts allow-same-origin">
-</iframe>
+                        src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%253C%21--HTML%2520--%253E%250A%253Cdiv%2520class%253D%2522%2520centered%2520shadow-box%2520margin-md%2520padding-y%2522%253E%2520%250A%2509%253Cbutton%2520class%253D%2522padding-sm%2520reset%2520btn-outline%2520font3%2522%2520id%253D%2522modal-sm-popup-btn%2522%253EShow%2520me%253C%252Fbutton%253E%250A%2520%2520%2520%2520%253Cdiv%2520class%253D%2522modal%2520modal-sm%2520shadow-box%2520mb-lg%2522%2520id%253D%2522sm-modal%2522%253E%250A%2520%2520%2509%253Cdiv%2520class%253D%2522font3%2520padding-xs%2522%253ESimple%2520small%2520modal%253C%252Fdiv%253E%253Chr%252F%253E%250A%2520%2520%2520%2520%253Cp%2520class%253D%2522light-text%2520padding-xs%2520mb-lg%2522%253ELorem%2520ipsum%252C%2520dolor%2520sit%2520amet%2520consectetur%2520adipisicing%2520elit.%2520%250A%2520%2509Eligendi%2520harum%2520odit%2520quasi.%253C%252Fp%253E%250A%2520%2520%2520%253Cbutton%2520class%253D%2522reset%2520padding-sm%2522%2520id%253D%2522cancel-btn-sm%2522%253ECancel%253C%252Fbutton%253E%250A%2520%2520%2520%2509%2520%253C%252Fdiv%253E%250A%2520%253C%252Fdiv%253E%250A%253C%21--js--%253E%250A%250Avar%2520btnsmallModal%2520%253D%2520document.querySelector%28%2522%2523modal-sm-popup-btn%2522%29%250Avar%2520smallModal%2520%253D%2520document.querySelector%28%2522%2523sm-modal%2522%29%250Avar%2520cancelbtnsm%2520%253D%2520document.querySelector%28%2522%2523cancel-btn-sm%2522%29%250AbtnsmallModal.addEventListener%28%2522click%2522%252C%28%29%253D%253E%257B%250A%2520%2520%2520%2520smallModal.style.display%253D%2522block%2522%250A%257D%29%250Acancelbtnsm.addEventListener%28%2522click%2522%252C%28%29%253D%253E%257B%250A%2520%2520%2520%2520smallModal.style.display%2520%253D%2522none%2522%250A%257D%29"
+                        class="iframe-lg"
+                        sandbox="allow-scripts allow-same-origin">
+                        </iframe>
                 </div>
                 
             </div>
@@ -111,10 +111,10 @@
             </div>
             <div class="iframe-wrapper">
                 <iframe
-  src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%250Avar%2520btnLoginModal%2520%253D%2520document.querySelector%28%2522%2523modal-lg-popup-btn%2522%29%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250Avar%2520loginModal%2520%253D%2520document.querySelector%28%2522%2523login-modal%2522%29%250A%250AbtnLoginModal.addEventListener%28%2522click%2522%252C%28%29%253D%253E%257B%250A%2520%2520%2520%2520loginModal.style.display%2520%253D%2520%2522block%2522%253B%250A%2520%2520%257D%29%250Avar%2520signupCloseBtn%2520%253D%2520document.querySelector%28%2522%2523signup-close-btn%2522%29%250Avar%2520signupCloseBtn2%2520%253D%2520document.querySelector%28%2522%2523signup-close-btn2%2522%29%250AsignupCloseBtn.addEventListener%28%2522click%2522%252C%28%29%253D%253E%257B%250A%2520%2520%2520%2520loginModal.style.display%2520%253D%2520%2522none%2522%250A%2520%2520%2520%250A%257D%29%250AsignupCloseBtn2.addEventListener%28%2522click%2522%252C%28%29%253D%253E%257B%250A%2520%2520%2520%2520loginModal.style.display%2520%253D%2520%2522none%2522%250A%257D%29%250A%2520%2520%250A%2520%2520"
-class="iframe-lg"
-  sandbox="allow-scripts allow-same-origin">
-</iframe>
+                    src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%250Avar%2520btnLoginModal%2520%253D%2520document.querySelector%28%2522%2523modal-lg-popup-btn%2522%29%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250Avar%2520loginModal%2520%253D%2520document.querySelector%28%2522%2523login-modal%2522%29%250A%250AbtnLoginModal.addEventListener%28%2522click%2522%252C%28%29%253D%253E%257B%250A%2520%2520%2520%2520loginModal.style.display%2520%253D%2520%2522block%2522%253B%250A%2520%2520%257D%29%250Avar%2520signupCloseBtn%2520%253D%2520document.querySelector%28%2522%2523signup-close-btn%2522%29%250Avar%2520signupCloseBtn2%2520%253D%2520document.querySelector%28%2522%2523signup-close-btn2%2522%29%250AsignupCloseBtn.addEventListener%28%2522click%2522%252C%28%29%253D%253E%257B%250A%2520%2520%2520%2520loginModal.style.display%2520%253D%2520%2522none%2522%250A%2520%2520%2520%250A%257D%29%250AsignupCloseBtn2.addEventListener%28%2522click%2522%252C%28%29%253D%253E%257B%250A%2520%2520%2520%2520loginModal.style.display%2520%253D%2520%2522none%2522%250A%257D%29%250A%2520%2520%250A%2520%2520"
+                    class="iframe-lg"
+                    sandbox="allow-scripts allow-same-origin">
+                    </iframe>
             </div>
            </div>
      
