--- a/css/style/modal.css
+++ b/css/style/modal.css
@@ -1,63 +1,54 @@
-body{
-    position: relative;
+body {
+  position: relative;
 }
-.modal{
-    position:absolute;
-    z-index:6;
-    display:none;
+.modal {
+  position: absolute;
+  z-index: 6;
+  display: none;
 }
-.modal-lg{
-    width:400px;
-    min-height:250px;
-    background-color: var(--secondary-color);
-    color:var(--text-light);
-    
+.modal-lg {
+  width: 400px;
+  min-height: 250px;
+  background-color: var(--secondary-color);
+  color: var(--text-light);
 }
-.modal-sm{
-    width:300px;
-    height:180px;
-    background-color: var(--primary-color);
-    text-align: center;
+.modal-sm {
+  width: 300px;
+  height: 180px;
+  background-color: var(--primary-color);
+  text-align: center;
 }
-.modal-header{
-    font-size:1.5rem;
-    display:flex;
-    justify-content: end;
-    padding:0rem .5rem;
+.modal-header {
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: end;
+  padding: 0rem 0.5rem;
 }
-.modal-content{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
+.modal-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
 }
-.img-border-white{
-    border: 3px solid var(--text-light);
+.img-border-white {
+  border: 3px solid var(--text-light);
 }
-.m-input:focus{
-    outline: none;
+.m-input:focus {
+  outline: none;
 }
-.modal-signin-btn{
-    margin:1rem auto;
-
+.modal-signin-btn {
+  margin: 1rem auto;
 }
-.modal-footer{
-    padding: 1rem;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 2rem;
+.modal-footer {
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2rem;
 }
-.modal-cancel-btn{
-    
-    height:25px;
+.modal-cancel-btn {
+  height: 25px;
 }
-.modal-link{
-
-  color:var(--text-light)
+.modal-link {
+  color: var(--text-light);
 }
-
-
-
-
-
