--- a/docsite/components/image.html
+++ b/docsite/components/image.html
@@ -56,40 +56,40 @@
            <div class="section">
             <h2 class="mb-lg">Round Image</h2>
             <div class="centered shadow-box margin-md padding-y">
-           <img src="../../assets/img1.jpg" alt="image 1" class="img border-round margin-md">
-           <img src="../../assets/img2.jpg" alt="image 2" class="img border-round margin-md">
+           <img src="../../assets/img1.jpg" loading="lazy" alt="image 1" class="img border-round margin-md">
+           <img src="../../assets/img2.jpg" loading="lazy" alt="image 2" class="img border-round margin-md">
             </div>
 
             <div class="iframe-wrapper">
-                <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%253Cimg%2520src%253D%2522..%252F..%252Fassets%252Fimg1.jpg%2522%2520alt%253D%2522image%25201%2522%2520class%253D%2522img%2520border-round%2522%253E%250A%2520%253Cimg%2520src%253D%2522..%252F..%252Fassets%252Fimg2.jpg%2522%2520alt%253D%2522image%25201%2522%2520class%253D%2522img%2520border-round%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520"
+               <iframe
+                src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%253Cimg%2520src%253D%2522..%252F..%252Fassets%252Fimg1.jpg%2522%2520alt%253D%2522image%25201%2522%2520class%253D%2522img%2520border-round%2522%2520loading%253D%2522lazy%2522%253E%250A%2520%253Cimg%2520src%253D%2522..%252F..%252Fassets%252Fimg2.jpg%2522%2520alt%253D%2522image%25201%2522%2520class%253D%2522img%2520border-round%2522%2520loading%253D%2522lazy%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520"
                 sandbox="allow-scripts allow-same-origin">
-              </iframe>
+                </iframe>
             </div>
            </div>
         <div class="section">
             <h2 class="mb-lg">Square Image</h2>
             <div class="centered shadow-box margin-md padding-y">
-                <img src="../../assets/img3.jpg" alt="image 3" class="img border-square margin-md">
-                <img src="../../assets/img4.jpg" alt="image 4" class="img border-square margin-md">
+                <img src="../../assets/img3.jpg" loading="lazy" alt="image 3" class="img border-square margin-md">
+                <img src="../../assets/img4.jpg" loading="lazy" alt="image 4" class="img border-square margin-md">
             </div>
             <div class="iframe-wrapper">
                 <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%253Cimg%2520src%253D%2522..%252F..%252Fassets%252Fimg3.jpg%2522%2520alt%253D%2522image%25203%2522%2520class%253D%2522img%2520border-square%2522%253E%250A%2520%253Cimg%2520src%253D%2522..%252F..%252Fassets%252Fimg4.jpg%2522%2520alt%253D%2522image%25204%2522%2520class%253D%2522img%2520border-square%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520"
+                src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%253Cimg%2520src%253D%2522..%252F..%252Fassets%252Fimg3.jpg%2522%2520alt%253D%2522image%25203%2522%2520class%253D%2522img%2520border-square%2522%2520loading%253D%2522lazy%2522%253E%250A%2520%253Cimg%2520src%253D%2522..%252F..%252Fassets%252Fimg4.jpg%2522%2520alt%253D%2522image%25204%2522%2520class%253D%2522img%2520border-square%2522%2520loading%253D%2522lazy%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520"
                 sandbox="allow-scripts allow-same-origin">
-              </iframe>
+                </iframe>
             </div>
         </div>
         <div class="section">
             <h2 class="mb-lg">Responsive Image</h2>
             <div class="centered shadow-box margin-md padding-y">
-            <img src="../../assets/item4.jpg" alt="img" class="responsive-img margin-md">
+            <img src="../../assets/item4.jpg" alt="img" class="responsive-img margin-md" loading="lazy">
             </div>
             <div class="iframe-wrapper">
-                <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%2520%253Cimg%2520src%253D%2522..%252F..%252Fassets%252Fimg4.jpg%2522%2520alt%253D%2522img%2522%2520class%253D%2522responsive-img%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520"
+              <iframe
+                src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%2520%2520%253Cimg%2520src%253D%2522..%252F..%252Fassets%252Fimg4.jpg%2522%2520alt%253D%2522img%2522%2520class%253D%2522responsive-img%2522%2520loading%253D%2522lazy%2522%253E%250A"
                 sandbox="allow-scripts allow-same-origin">
-              </iframe>
+                </iframe>
             </div>
         </div>
          
