--- a/css/style/card.css
+++ b/css/style/card.css
@@ -5,22 +5,22 @@
   display: inline-block;
 }
 .simple-card {
-  max-width: 300px;
-  min-height: 280px;
+  max-width: 18.75rem;
+  min-height: 17.5rem;
 }
 .text-only-card {
-  max-width: 300px;
-  min-height: 150px;
+  max-width: 18.75rem;
+  min-height: 9.8rem;
 }
 .horizontal-card {
-  max-width: 320px;
-  min-height: 180px;
+  max-width: 16rem;
+  min-height: 11.25;
 }
 .card-img {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  width: 300px;
-  height: 180px;
+  width: 18.75rem;
+  height: 11.25rem;
   z-index: 3;
 }
 .card-heading {
@@ -80,8 +80,8 @@
 }
 
 .horizontal-card-img {
-  min-width: 100px;
-  height: 100px;
+  min-width: 6.25rem;
+  height: 6.25rem;
   margin: 10px 0 0 10px;
 }
 .stars {
