--- a/css/style/badge.css
+++ b/css/style/badge.css
@@ -1,46 +1,45 @@
-.avatar-badge{
-    position: relative;
+.avatar-badge {
+  position: relative;
 }
-.status-circle{
-    position: absolute;
-    border-radius: 50%;
-    border:2px solid var(--text-light);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color:var(--text-light);
+.status-circle {
+  position: absolute;
+  border-radius: 50%;
+  border: 2px solid var(--text-light);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--text-light);
 }
-.md-circle{
-    width:1.8rem;
-    height:1.8rem;
-    top:5rem;
-    left:6.3rem;
-    background-color: var(--primary-color);
+.circle-md {
+  width: 1.8rem;
+  height: 1.8rem;
+  top: 5rem;
+  left: 6.3rem;
+  background-color: var(--primary-color);
 }
-.sm-circle{
-    width:1.3rem;
-    height:1.3rem;
-    top:3.8rem;
-    left:5.3rem;
-    background-color: var(--green);
-    
+.circle-sm {
+  width: 1.3rem;
+  height: 1.3rem;
+  top: 3.8rem;
+  left: 5.3rem;
+  background-color: var(--green);
 }
-.xs-circle{
-    top:2.5rem;
-    left:3.8rem;
-    width:.75rem;
-    height:.75rem;
-    background-color: var(--red);
+.circle-xs {
+  top: 2.5rem;
+  left: 3.8rem;
+  width: 0.75rem;
+  height: 0.75rem;
+  background-color: var(--red);
 }
-.icon-top-badge{
-    width:1.8rem;
-    height:1.8rem;
-    top:-1rem;
-    left:1.50rem;
+.icon-top-badge {
+  width: 1.8rem;
+  height: 1.8rem;
+  top: -1rem;
+  left: 1.5rem;
 }
-.icon-top-badge-sm{
-    width:1.8rem;
-    height:1.8rem;
-    top:-1rem;
-    left:1.0rem;
+.icon-top-badge-sm {
+  width: 1.8rem;
+  height: 1.8rem;
+  top: -1rem;
+  left: 1rem;
 }
