--- a/css/style/grid.css
+++ b/css/style/grid.css
@@ -10,7 +10,7 @@
   grid-area: right;
 }
 .grid-3-cols-layout {
-  display: flex;
+  display: grid;
   grid-template-areas: left middle right;
   grid-template-columns: repeat(3, fr);
   grid-gap: 25px;
