--- a/css/style/image.css
+++ b/css/style/image.css
@@ -1,9 +1,9 @@
 img {
-  width: 200px;
-  height: 200px;
+  width: 12.5rem;
+  height: 12.5rem;
 }
 .responsive-img {
   width: 100%;
   height: auto;
-  object-fit: cover;
+  object-fit: contain;
 }
