refactor: class name and iframe

--- a/css/style/grid.css
+++ b/css/style/grid.css
@@ -1,6 +1,7 @@
 .grid-2-cols-layout {
   width: inherit;
   display: grid;
+  grid-template-columns: repeat(2, 1fr);
   grid-template-areas: "left right";
 }
 .left-pane {
