--- a/docsite/components/card.html
+++ b/docsite/components/card.html
@@ -155,13 +155,7 @@
                   <p class="text-primary font3">₹499 only</p>
                 </div>
                 <i
-                  class="
-                    far
-                    fa-heart fa-lg
-                    evenly-padding-sm
-                    card-icon
-                    border-round
-                  "
+                  class="far fa-heart fa-lg evenly-padding-sm card-icon border-round"
                 ></i>
               </div>
             </div>
@@ -182,13 +176,7 @@
                   <p class="text-primary font3">₹499 only</p>
                 </div>
                 <i
-                  class="
-                    far
-                    fa-heart fa-lg
-                    evenly-padding-sm
-                    card-icon
-                    border-round
-                  "
+                  class="far fa-heart fa-lg evenly-padding-sm card-icon border-round"
                 ></i>
               </div>
             </div>
@@ -212,14 +200,7 @@
             <div class="card simple-card mb-lg margin-md reset card-dismiss">
               <img src="../../assets/item2.jpg" alt="" class="card-img" />
               <button
-                class="
-                  btn
-                  rm-border
-                  btn-transparent
-                  font2
-                  dismiss-card-btn
-                  reset
-                "
+                class="btn rm-border btn-transparent font2 dismiss-card-btn reset"
               >
                 X
               </button>
@@ -301,25 +282,13 @@
                     Unique artworks from North India
                   </p>
                   <button
-                    class="
-                      reset
-                      btn btn-outline
-                      padding-xs
-                      font3
-                      hover-secondary
-                    "
+                    class="reset btn btn-outline padding-xs font3 hover-secondary"
                   >
                     Go
                   </button>
                 </div>
                 <i
-                  class="
-                    far
-                    fa-heart fa-lg
-                    evenly-padding-sm
-                    card-icon
-                    border-round
-                  "
+                  class="far fa-heart fa-lg evenly-padding-sm card-icon border-round"
                 ></i>
               </div>
             </div>
@@ -370,14 +339,7 @@
 
               <div class="card-textarea">
                 <button
-                  class="
-                    reset
-                    btn btn-outline
-                    padding-xs
-                    margin-sm
-                    font3
-                    hover-secondary
-                  "
+                  class="reset btn btn-outline padding-xs margin-sm font3 hover-secondary"
                 >
                   View
                 </button>
@@ -416,13 +378,7 @@
                   <p class="text-primary font3">₹359 only</p>
                 </div>
                 <i
-                  class="
-                    far
-                    fa-heart fa-lg
-                    evenly-padding-sm
-                    card-icon
-                    border-round
-                  "
+                  class="far fa-heart fa-lg evenly-padding-sm card-icon border-round"
                 ></i>
               </div>
             </div>
