--- a/docsite/components/image.html
+++ b/docsite/components/image.html
@@ -83,7 +83,7 @@
         <div class="section">
             <h2 class="mb-lg">Responsive Image</h2>
             <div class="centered shadow-box margin-md padding-y">
-            <img src="../../assets/item4.jpg" alt="img" class="responsive-img margin-md" loading="lazy">
+            <img src="../../assets/item4.jpg" alt="img" class="img-responsive margin-md" loading="lazy">
             </div>
             <div class="iframe-wrapper">
               <iframe
