--- a/docsite/components/navigation.html
+++ b/docsite/components/navigation.html
@@ -103,7 +103,7 @@
     
     <footer class="centered vertical-direction bg-secondary">
         <button class="prev-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-primary" href="textutil.html"><i class="fa fa-arrow-left "></i> Text Utils </a></button>
-        <button class="next-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-primary" href="navigation.html">Navigation <i class="fa fa-arrow-right "></i> </a></button>
+        <button class="next-page-btn btn-transparent btn rm-border font2 float"><a class="decor-none text-primary" href="modal.html">Modal<i class="fa fa-arrow-right "></i> </a></button>
        
 
         <h2 class=" mb-lg ">Build with <span class="text-primary">&lt;/&gt;</span> by Kajal Kumari</h2>
