--- a/css/style/image.css
+++ b/css/style/image.css
@@ -2,7 +2,7 @@ img {
   width: 12.5rem;
   height: 12.5rem;
 }
-.responsive-img {
+.img-responsive {
   width: 100%;
   height: auto;
   object-fit: contain;
