feat: grid responsive, fix: typo

--- a/docsite/components/grid.html
+++ b/docsite/components/grid.html
@@ -58,10 +58,10 @@
            <div class="section">
                 <h2 class="mb-lg">Grid-2 Two items in a grid</h2>
            
-                <div class="shadow-box margin-md padding-y "> 
+                <div class="shadow-box margin-md padding-y grid-wrapper"> 
                    <div class="grid-2-cols-layout">
                     <div class="left-pane">
-                        <img src="../../assets/item4.jpg" alt="img" class="responsive-img">
+                        <img src="../../assets/item4.jpg" alt="img" class="img-responsive">
                     </div>
                     <div class="right-pane centered vertical-direction">
                         <h2 class="mb-lg font1">Beautiful Paintings</h2>
@@ -74,7 +74,7 @@
            
                 <div class="iframe-wrapper">
                     <iframe
-                    src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=764&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%2509%2520%253Cdiv%2520class%253D%2522grid-2-cols-layout%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522left-pane%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520src%253D%2522..%252F..%252Fassets%252Fitem4.jpg%2522%2520alt%253D%2522img%2522%2520class%253D%2522responsive-img%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522right-pane%2520centered%2520%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ch2%2520class%253D%2522mb-lg%2520font1%2522%253EBeautiful%2520Paintings%253C%252Fh2%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522font2%2520text-secondary%2522%253EStarting%2520at%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522text-primary%2522%253E%25E2%2582%25B9499%253C%252Fspan%253E.%253C%252Fp%253E%253Cstrike%253E%25E2%2582%25B9999%253C%252Fstrike%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522text-success%2520font4%2520mb-lg%2522%253E50%2525%2520off%253C%252Fspan%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522reset%2520bg-secondary%2520light-text%2520padding-sm%2520rm-border%2520%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Shop%2520Now%253C%252Fbutton%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520"
+                    src="https://carbon.now.sh/embed?bg=rgba%28155%2C155%2C155%2C1%29&t=night-owl&wt=sharp&l=auto&width=764&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=0px&ph=0px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%2509%2520%253Cdiv%2520class%253D%2522grid-2-cols-layout%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522left-pane%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cimg%2520src%253D%2522..%252F..%252Fassets%252Fitem4.jpg%2522%2520alt%253D%2522img%2522%2520class%253D%2522img-responsive%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cdiv%2520class%253D%2522right-pane%2520centered%2520%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Ch2%2520class%253D%2522mb-lg%2520font1%2522%253EBeautiful%2520Paintings%253C%252Fh2%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cp%2520class%253D%2522font2%2520text-secondary%2522%253EStarting%2520at%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522text-primary%2522%253E%25E2%2582%25B9499%253C%252Fspan%253E.%253C%252Fp%253E%253Cstrike%253E%25E2%2582%25B9999%253C%252Fstrike%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cspan%2520class%253D%2522text-success%2520font4%2520mb-lg%2522%253E50%2525%2520off%253C%252Fspan%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253Cbutton%2520class%253D%2522reset%2520bg-secondary%2520light-text%2520padding-sm%2520rm-border%2520%2522%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520Shop%2520Now%253C%252Fbutton%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%253C%252Fdiv%253E%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520"
                     class="iframe-lg"
                     sandbox="allow-scripts allow-same-origin">
                   </iframe>
@@ -85,12 +85,12 @@
 
         <div class="section">
             <h2 class="mb-lg">Grid 3 Three items in a grid</h2>
-            <div class="shadow-box margin-md padding-y">
+            <div class="shadow-box margin-md padding-y grid-wrapper">
                 <div class="grid-3-cols-layout">
                     <div class="left-side">
                        <!--Vertical card with badge-->
 <div class="card simple-card reset">
-    <img src="../../assets/item1.jpg" alt="" class="card-img">
+    <img src="../../assets/item1.jpg" alt="image" class="card-img">
     <div class="card-textarea">
         <div class="left-pane evenly-padding-sm">
             <h2 class="card-heading ">Wind Chyme</h2>
@@ -134,7 +134,7 @@
                     <div class="right-side">
                         <!--Vertical card with badge-->
 <div class="card simple-card reset">
-    <img src="../../assets/item1.jpg" alt="" class="card-img">
+    <img src="../../assets/item1.jpg" alt="image" class="card-img">
     <div class="card-textarea">
         <div class="left-pane evenly-padding-sm">
             <h2 class="card-heading ">Wind Chyme</h2>
