--- a/css/style/grid.css
+++ b/css/style/grid.css
@@ -12,8 +12,8 @@
 }
 .grid-3-cols-layout {
   display: grid;
-  grid-template-areas: left middle right;
   grid-template-columns: repeat(3, fr);
+  grid-template-areas: "left middle right";
   grid-gap: 25px;
 }
 .left-side {
@@ -24,4 +24,17 @@
 }
 .middle {
   grid-area: middle;
+}
+@media only screen and (max-width: 768px) {
+  .grid-2-cols-layout {
+    grid-template-columns: 1fr;
+    grid-template-areas: "left" "right";
+  }
+  .grid-3-cols-layout {
+    grid-template-columns: 1fr;
+    grid-template-areas: "left" "middle" "right";
+  }
+  .grid-wrapper {
+    width: 18.75rem;
+  }
 }
