--- a/docsite/components/toast.html
+++ b/docsite/components/toast.html
@@ -56,8 +56,8 @@
             <p class="mb-lg font3 text-secondary">Toast are often used as tooltips or popups to show a message at the bottom of the screen.</p></div>
            
                 <div class="centered shadow-box margin-md padding-y vertical-direction"> 
-                    <button class="reset padding-sm btn-outline font3" id="toast-btn">Show Toast</button>
-                    <div id="toast">Hii, I am toast. I will be gone in 3 seconds</div>
+                    <button class="reset padding-sm btn-outline font3 toast-btn" id="toast-btn">Show Toast</button>
+                    <div class="toast" id="toast">Hii, I am toast. I will be gone in 3 seconds</div>
                 </div>
            
                 <div class="iframe-wrapper">
