--- a/docsite/docs.css
+++ b/docsite/docs.css
@@ -1,132 +1,124 @@
 @import url("../css/main.css");
 
-body{
-    display:grid;
-    grid-template-columns: 250px auto;
-    grid-template-rows: 100px auto 100px;
-    grid-gap:50px;
-    grid-template-areas: 
+body {
+  display: grid;
+  grid-template-columns: 250px auto;
+  grid-template-rows: 100px auto 100px;
+  grid-gap: 50px;
+  grid-template-areas:
     "header header"
     "aside main"
-    "footer footer"
-    ;
+    "footer footer";
 }
-header{
-        grid-area: header;
+header {
+  grid-area: header;
 }
-.navbar{
-    background-color: var(--bg-color);
-    display:grid;
-    grid-template-columns: repeat(2,1fr);
-    
+.navbar {
+  background-color: var(--bg-color);
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
-.last-col > ul > li{
-    padding:0rem .6rem;
+.last-col > ul > li {
+  padding: 0rem 0.6rem;
 }
-aside{
-    max-height:80vh;
-    position:sticky;
-    top:30px;
-    grid-area: aside;
-    text-align: left;
-    border-right: 2px solid var(--primary-color);
-    overflow-y:auto;
+aside {
+  max-height: 80vh;
+  position: sticky;
+  top: 30px;
+  grid-area: aside;
+  text-align: left;
+  border-right: 2px solid var(--primary-color);
+  overflow-y: auto;
 }
 aside::-webkit-scrollbar {
-    background-color: var(--text-light);
+  background-color: var(--text-light);
 }
-aside > h1{
-    position:relative;
-    font-weight:500;
-    font-size: 1.7rem;
-    margin-bottom:20px;
+aside > h1 {
+  position: relative;
+  font-weight: 500;
+  font-size: 1.7rem;
+  margin-bottom: 20px;
 }
 
-.aside-link:hover{
-   color:var(--primary-color);
-   cursor: pointer;
-   
+.aside-link:hover {
+  color: var(--primary-color);
+  cursor: pointer;
 }
-.active{
-    color:var(--primary-color);
-    font-size: 1.4rem;
-    font-weight: 700;
-    text-shadow: 1px 0px 1px rgba(0, 0, 7, 0.76);
- 
+.active {
+  color: var(--primary-color);
+  font-size: 1.4rem;
+  font-weight: 700;
+  text-shadow: 1px 0px 1px rgba(0, 0, 7, 0.76);
 }
-main{
+main {
+  grid-area: main;
+}
+footer {
+  position: relative;
+  grid-area: footer;
+  min-height: 25vh;
+  color: var(--text-light);
+  z-index: 2;
+}
+iframe {
+  width: 43.75rem;
+  height: 12.5rem;
+  border: 0;
+  transform: scale(1);
+  overflow-x: hidden;
+  margin-top: 5rem;
+}
+.iframe-lg {
+  width: 55rem;
+  height: 33.125rem;
+}
+.section {
+  margin: 0 0 3rem 0;
+}
+.prev-page-btn {
+  position: absolute;
+  left: 17rem;
+  bottom: 12rem;
+}
+
+.next-page-btn {
+  position: absolute;
+  right: 20px;
+  bottom: 12rem;
+}
+@media only screen and (max-width: 768px) {
+  body {
+    grid-gap: 30px;
+    grid-template-areas:
+      "header header"
+      "main main"
+      "footer footer";
+  }
+  main {
     grid-area: main;
-}
-footer{
-    position:relative;
-    grid-area: footer;
-    min-height:25vh;
-    color:var(--text-light);
-    z-index: 2;
-}
-iframe{
-    width: 43.75rem; 
-    height: 12.5rem; 
-    border:0; 
-    transform: scale(1); 
-    overflow-x:hidden;
-    margin-top:5rem;
-}
-.iframe-lg{
-    width: 55rem;
-    height: 33.125rem;
-}
-.section{
-    margin:0 0 3rem 0;
-    
-}
-.prev-page-btn{
-    position: absolute;
-    left:17rem;
-    bottom:12rem;
-}
+    padding: 1rem;
+  }
+  .content-wrapper {
+    padding: 0rem;
+  }
+  .last-col {
+    margin-left: none;
+    padding: 0rem 0.1rem;
+  }
+  aside {
+    display: none;
+  }
+  iframe,
+  .iframe-lg {
+    width: 18.75rem;
+  }
+  .prev-page-btn {
+    left: 0;
+    bottom: 11rem;
+  }
 
-.next-page-btn{
-    position: absolute;
-    right:20px;
-    bottom:12rem;
-}
-@media only screen and (max-width:768px){
-   
-    body{
-        grid-gap:30px;
-        grid-template-areas: 
-    "header header"
-    "main main"
-    "footer footer"
-    ;
-    }
-    main{
-        grid-area: main;
-        padding:1rem
-    }
-    .content-wrapper{
-        padding:0rem;
-    }
-    .last-col{
-        margin-left: none;
-        padding:0rem .1rem;
-    
-    }
-    aside{
-        display:none
-    }
-    iframe , .iframe-lg{
-        width:18.75rem;
-    }
-    .prev-page-btn{
-        left:0;
-        bottom:11rem;
-    }
-    
-    .next-page-btn{
-        right:0;
-        bottom:11rem;
-    }
-    
+  .next-page-btn {
+    right: 0;
+    bottom: 11rem;
+  }
 }
