--- a/docsite/components/textutil.html
+++ b/docsite/components/textutil.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../docs.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
-<body>
+<body class="body-wrapper">
     <header class="shadow-box navbar">
         <div class="first-col">
             <h1 class="hero-font  margin-md title text-primary shadow-text">Beads
@@ -55,7 +55,7 @@
                <p class="mb-lg font3 text-secondary">Text utils are used to show text on any website.It can be of any sizes or of any color.</p>
            <div class="section">
             <h2 class="mb-lg">Text of different sizes</h2>
-            <p class="mb-lg font3 text-secondary">beadsUI has font from 1 to 6 in decreasing font size order</p>
+            <p class="mb-lg font3 text-secondary">BeadsUI has font from 1 to 6 in decreasing font size order.</p>
             <div class="centered shadow-box margin-md padding-y">
                 <div class="block">
                     <p class="font1">Extra Large Text</p>
