--- a/css/style/modal.css
+++ b/css/style/modal.css
@@ -1,10 +1,10 @@
-body {
-  position: relative;
-}
 .modal {
-  position: absolute;
+  position: fixed;
   z-index: 6;
   display: none;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .modal-lg {
   width: 400px;
