--- a/docsite/components/badge.html
+++ b/docsite/components/badge.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body class="body-wrapper">
     <header class="shadow-box navbar">
       <div class="first-col">
         <h1 class="hero-font margin-md title text-primary shadow-text">
