--- a/docsite/components/rating.html
+++ b/docsite/components/rating.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../docs.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
-<body>
+<body class="body-wrapper">
     <header class="shadow-box navbar">
         <div class="first-col">
             <h1 class="hero-font  margin-md title text-primary shadow-text">Beads
