--- a/docsite/docs.css
+++ b/docsite/docs.css
@@ -1,6 +1,6 @@
 @import url("../css/main.css");
 
-body {
+.body-wrapper {
   display: grid;
   grid-template-columns: 250px auto;
   grid-template-rows: 100px auto 100px;
@@ -87,7 +87,7 @@ iframe {
   bottom: 12rem;
 }
 @media only screen and (max-width: 768px) {
-  body {
+  .body-wrapper {
     grid-gap: 30px;
     grid-template-areas:
       "header header"
