--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ header {
   height: 100px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  align-items:center;
 }
 .last-col > ul > li {
   padding: 0rem 0.6rem;
